--- a/Techjournals.html
+++ b/Techjournals.html
@@ -3,23 +3,27 @@
   <head>
     <title>PARKES - The Road Race motorcycle</title>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>PARKES</title>
 
-    <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?ver=1.4.2'></script>
-    <script src="https://use.fontawesome.com/10386a299c.js"></script>
     <link rel="shortcut icon" href="img/favicon.jpg" type="image/vnd.microsoft.icon">
-    <link rel="stylesheet" href="stylesheets/screenindex.css" type="text/css">
+    <link rel="stylesheet" href="stylesheets/screenintro.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="scripts/bootstrap.js"></script>
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
     <script type='text/javascript' src="scripts/script.js"></script>
-    <script type="text/javascript" src="slick/slick.js"></script>
-    <script type="text/javascript" src="scripts/index.js"></script>
-
+    <style>
+      html {
+        background: url("img/039.jpg") no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+      }
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
   </head>
   <body id="body">
@@ -33,7 +37,7 @@
 	  <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="true" aria-controls="navbar">
-         </button>
+             </button>
         <a class="navbar-brand logo">PARKES</a>
       </div>
       <div id="navbar" class="navbar-collapse collapse in" aria-expanded="true" style="">
@@ -71,32 +75,35 @@
     
 
     <div id="spacer-div"></div>
+  
+    <div id="spacer-div"></div>
 
     <div id="intro-background">
-      <div id="title1-light">The story behind the development</div>
-      <div class="narrow-content" style="color:#ffffff">The technical diary</div>
-    </div>
-
-    <div id="content-background">
-      <div id="title1">An alternative approach to road racing</div>
-
-      <div class='container2'>
-        <div class="col1">
-          <i class="fa fa-road fa-5x" style="color:#00bcd4"></i>
-          <h2>Raced at the toughest race track in the world</h2>
-          <div>Where better to develop a prototype chassis with a unique suspension design than in between stone walls on public roads?</div>
-          <p style="margin-top:1em">
-            <a href="./Introduction.html">
-              <button>
-                Read the reports
-              </button>
-            </a>
-          </p>
-        </div>
+      <div id="title1-light">Tech Journals</div>
+      <div class="narrow-content" style="color:#ffffff">The story behind the development</div>
+    
+    <div style="height:100px"></div>
+    <div class="support-flexbox">
+      <div class="support-link">
+		<a href="https://www.tparkes.co.uk/chassis.html" target="_blank">Chassis</a>
       </div>
-
+      <div class="support-link">
+        <a href="https://www.tparkes.co.uk/swingarm.html" target="_blank">Swingarm</a>
+      </div>
+		<div class="support-link">
+		<a href="https://www.tparkes.co.uk/engine.html" target="_blank">Engine</a>
+      </div>
+      <div class="support-link">
+        <a href="https://www.tparkes.co.uk/aero.html" target="_blank">Aero</a>
+      </div>
+	  <div class="support-link">
+		<a href="https://www.tparkes.co.uk/cooling.html" target="_blank">Cooling</a>
+      </div>
+      <div class="support-link">
+        <a href="https://www.tparkes.co.uk/exhaust.html" target="_blank">Exhaust</a>
+      </div>
     </div>
-
+	</div>
     <div id="footer-background">
       <p>
         <span style="font: 3.5em 'Oswald', sans-serif">
@@ -106,44 +113,7 @@
         The Road Race Motorcycle
       </p>
 
-      <div class="carousel-container">
-        <div class="slider-parkes">
-          <div class="slider-item">
-            <img src="img/paddock1.jpg" class="slider-image" alt="">
-            <div class="slider-text">
-              2017 chassis - Isle of Man
-            </div>
-          </div>
-          <div class="slider-item">
-            <img src="img/002.jpg" class="slider-image" alt="">
-            <div class="slider-text">
-              2016 Plumbing the 8 fuel injectors
-            </div>
-          </div>
-          <div class="slider-item">
-            <img src="img/southern3.jpg" class="slider-image" alt="">
-            <div class="slider-text">
-              Church bends 2016
-            </div>
-          </div>
-          <div class="slider-item">
-            <img src="img/main.jpg" class="slider-image" alt="">
-            <div class="slider-text">
-              2017 - Now with linear rising rate
-            </div>
-          </div>
-          <div class="slider-item">
-            <img src="img/churchbends16.jpg" class="slider-image" alt="">
-            <div class="slider-text">
-              2016 - Hugging the wall on church bends
-            </div>
-          </div>
-        </div>
-      </div>
+    </div>
 
-    </div>
-    <div class="grid-wide-center">
-      <h6>Photo courtesy of Dave Kneen Photography</h6>
-    </div>
   </body>
 </html>
