--- a/Introduction.html
+++ b/Introduction.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-
+	<script type="text/javascript" src="scripts/bootstrap.js"></script> 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
     <script type='text/javascript' src="scripts/script.js"></script>
@@ -39,11 +39,7 @@
 	  <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="true" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+              </button>
         <a class="navbar-brand logo">PARKES</a>
       </div>
       <div id="navbar" class="navbar-collapse collapse in" aria-expanded="true" style="">
