--- a/Techjournals.html
+++ b/Techjournals.html
@@ -82,22 +82,22 @@
       <div style="height:100px"></div>
       <div class="support-flexbox">
         <div class="support-link">
-          <a href="/chassis.html" target="_blank">Chassis</a>
+          <a href="./chassis.html" target="_blank">Chassis</a>
         </div>
         <div class="support-link">
-          <a href="/Swingarm.html" target="_blank">Swingarm</a>
+          <a href="./Swingarm.html" target="_blank">Swingarm</a>
         </div>
         <div class="support-link">
-          <a href="/engine.html" target="_blank">Engine</a>
+          <a href="./engine.html" target="_blank">Engine</a>
         </div>
         <div class="support-link">
-          <a href="/aero.html" target="_blank">Aero</a>
+          <a href="./aero.html" target="_blank">Aero</a>
         </div>
         <div class="support-link">
-          <a href="/cooling.html" target="_blank">Cooling</a>
+          <a href="./cooling.html" target="_blank">Cooling</a>
         </div>
         <div class="support-link">
-          <a href="/exhaust.html" target="_blank">Exhaust</a>
+          <a href="./exhaust.html" target="_blank">Exhaust</a>
         </div>
       </div>
     </div>
