tech journal updates google analy

--- a/Engine.html
+++ b/Engine.html
@@ -11,7 +11,16 @@
 	<link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
     
-	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112635987-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112635987-1');
+</script>
+
 	<script
 	  src="https://code.jquery.com/jquery-3.2.1.min.js"
 	  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -99,7 +108,7 @@
             <div class="main-container">
       <div class="grid-span">
         <h2>The history behind it</h2>
-        It has taken me 5 years on and off to develop the engine in amongst all of the other tasks. As it stands today it is fairly reliable and quite modestly powerful but I can see that I am reaching the limits of potential with the crankcases. It has been quite a learning experience and I have stumbled across some interesting tricks which you wouldn’t normally find in most tuned engines.
+        It has taken me 5 years on and off to develop the engine in amongst all of the other tasks. As it stands today it is fairly reliable and quite modestly powerful but I can see that I am reaching the limits of these crankcases. Primarily due to the weak open deck arrangment and the high cylinder pressures I have induced. I have closed the unsupported cylinder castings in a hexagonal arrangement to provide rigidity behind the thrust faces. Manufacturers tend to favour open cylinder decks due to lower production costs as a closed deck will require single use cores rather than an open deck utilising replenishable tooling. It has been quite a learning experience and I have stumbled across some interesting tricks which you wouldn’t normally find in most tuned engines.
       </div>
 	  
 	  <div class="image-left-container" width="430px">
@@ -111,7 +120,7 @@
 	  
       <div class="grid-left-two">
         <h2 align="left">Slow to learn</h2>
-        I lacked the time and resource to do back to back testing to really validate individual gains in components. It’s difficult to describe in words but from spending so much time immersed in each and every component in the way I have, coupled with experience from previous tuning you can attribute a factor of contribution to the power gains and equate approximate results to these areas. When a component contributes a far greater gain than expected you can start to explore the how’s and why’s; which for me led me to stumbling on 2 interesting areas; the induction turbulence and cylinder pressures.
+        I lacked the time and resource to do back to back testing to really validate individual gains in components. It’s difficult to describe in words but from spending so much time immersed in each and every component in the way I have, coupled with experience from previous tuning you can attribute a factor of contribution to the power gains and equate approximate results to these areas. When a component contributes a far greater gain than expected you can start to explore the how’s and why’s; which amongst many, led me to investigating two interesting areas; the induction turbulence and cylinder pressures.
       </div>
       <div class="grid-right-three">
         <h2 align="left">Lots still to do...</h2>
@@ -127,13 +136,13 @@
 	  
       <div class="grid-wide-center">
         <h2 align="left">Testing</h2>
-        Over the years there has been lots of dyno time. Back in 2014 when I did my first stage of reboring out to 836cc I spoke to Tony scott and we decided that the nikasil composite liners are worth testing to the limit. The liners were a special aluminium alloy impregnated with nikasil throughout rather than surface coated however so I learned the saturation of nikasil content was not consistent through the material. I also degraded it’s heat conductivity, structural rigidity and surface finish away from an ideal as I bored it to leave only 1.5mm of wall thickness of the liner. Needless to say it lasted a mere 40 minutes on the dyno before it picked up and started to loose power. Enough time to map the majority of the lower end and do a power run. It was such a great experience using Freddys dyno; not only did it take 6 hours after a full days work to set it up and bolt it to the dyno, come midnight we were sat outside the room, I was controlling the aircraft style joystick hooked upto the throttle cable while freddy did the load resistance. The ecu needed half a second in each box to verify the revs, lambda and throttle position sensor before making the fuelling change so we had to scan lots of dials and watch for temperature fluctuations and power at the same time. Full on concentration but so rewarding. Modern day systems for big car companies do all this automatically now, pre programmed dyno sequences to tune and test. We finished up around 2am, I had nearly a 2 hour drive home then up at 6 for work. It didn’t matter, I was stoked. Subsequent rebuilds and a few iron liners later I was back for more; it was now an 848cc. I had taken it from 136hp to 142hp. The first engines reved all the way to 14,000 rpm, newer motors were more ballsy in the mid range and fizzed out by 12,000 rpm – it was intentional; my focus was corner exit speed. Something I witnessed first hand at the southern 100; off the start and finish line I was absolutely matched with all the superbikes for acceleration from a stand still even with 142hp but down 3 gears and enter the first corner, back on the power and every bike made 10 metres on me within a second; there was no more power scotty. Rate of acceleration and gas speed were way down. Reciprocating mass was good as was friction losses but the difference in speed was embarrassing and possibly dangerous.
+        Over the years there has been lots of dyno time. Back in 2014 when I did my first stage of reboring out to 836cc I spoke to Tony scott for his opinion and we decided that the nikasil composite liners are worth testing to the limit. The liners were at the time a special aluminium alloy impregnated with nikasil throughout rather than the conventional surface coating however so I learned the saturation of nikasil content was not consistent through the material. I also degraded it’s heat conductivity, structural rigidity and surface finish away from an ideal as I bored it to leave only 1.5mm of wall thickness of the liner. Needless to say it lasted a mere 40 minutes on the dyno before it picked up and started to loose power. Enough time to see the benefits of my initial induction and exhaust work; a 43% increase in hp. It was such a great experience using Freddys dyno; not only did it take 6 hours after a full days work to set it up and bolt it to the dyno, come midnight we were sat outside the room, I was controlling the aircraft style joystick hooked upto the throttle cable while freddy did the load resistance. The ecu needed just milliseconds in each box to verify the revs, lambda and throttle position sensor before making the fuelling change so we had to scan lots of dials and watch for temperature fluctuations and power at the same time. Full on concentration but so rewarding. Modern day systems for big car companies do all this automatically now, pre programmed dyno sequences to tune and test. We finished up around 2am, I had nearly a 2 hour drive home then up at 6 for work. It didn’t matter, I was stoked. Subsequent rebuilds and a few iron liners later I was back for more; it was now an 848cc. The first engines reved all the way to 14,000 rpm, newer motors were more ballsy in the mid range and fizzed out by 12,000 rpm – it was intentional; my focus was corner exit speed. Something I witnessed first hand at the southern 100; off the start and finish line I was absolutely matched with all the superbikes for acceleration from a stand still even with 142hp but down 3 gears and enter the first corner, back on the power and every bike made 10 metres on me within a second; there was no more power scotty. Rate of acceleration and gas speed were way down. Reciprocating mass was good as was friction losses but the difference in speed was embarrassing and possibly dangerous.
       </div>
       <div class="grid-narrow-center">
         <h2>2017</h2>
-        2017 brought the big bang engine, out to 938cc now; long stroke, stronger lighter conrods, new exhausts and most importantly a different firing order. Over to Kev’s dyno in Cradley for this one as Freddy had closed up. Kev’s is a rolling road; a good one but still only a rolling road, they have limitations and harder to quickly change loads to do the mid range work but far simplier to load the bike on at least! April 2017 saw the new motor make 150hp at 13,400 rpm.
+        2017 brought the big bang engine, out to 938cc now; long stroke, stronger, lighter conrods, new exhausts and most importantly a 180 degree firing order. Over to Kev’s dyno in Cradley for this one as Freddy had closed up. Kev’s is a rolling road; a good one but still only a rolling road, they have limitations and harder to quickly change loads to do the mid range work but far simplier to load the bike on at least! April 2017 saw the new engine make 152hp at 13,400 rpm; a 58% improvement on the original.
 		<div class="image-left-container" width="430px">
-          <img src="img/engine3.jpg" class="image-left" width="400px">
+          <img src="img/engine2.jpg" class="image-left" width="400px">
           <div class="image-text">
             Guy and Tom discussing cam profiles
           </div>
