--- a/Techjournals.html
+++ b/Techjournals.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="stylesheets/screenintro.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112635987-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112635987-1');
+</script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 
@@ -82,19 +91,19 @@
       <div style="height:100px"></div>
       <div class="support-flexbox">
         <div class="support-link">
-          <a href="./chassis.html" target="_blank">Chassis</a>
+          <a href="./Chassis.html" target="_blank">Chassis</a>
         </div>
         <div class="support-link">
           <a href="./Swingarm.html" target="_blank">Swingarm</a>
         </div>
         <div class="support-link">
-          <a href="./engine.html" target="_blank">Engine</a>
+          <a href="./Engine.html" target="_blank">Engine</a>
         </div>
         <div class="support-link">
-          <a href="./aero.html" target="_blank">Aero</a>
+          <a href="./Aero.html" target="_blank">Aero</a>
         </div>
         <div class="support-link">
-          <a href="./cooling.html" target="_blank">Cooling</a>
+          <a href="./Cooling.html" target="_blank">Cooling</a>
         </div>
         <div class="support-link">
           <a href="./exhaust.html" target="_blank">Exhaust</a>
