--- a/Aero.html
+++ b/Aero.html
@@ -4,13 +4,22 @@
     <title>PARKES - The Road Race motorcycle</title>
     <meta charset="UTF-8">
     <title>PARKES</title>
-
+	
     <link rel="shortcut icon" href="img/favicon.jpg" type="image/vnd.microsoft.icon">
     <link rel="stylesheet" href="stylesheets/screenintro.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
     
-	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112635987-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112635987-1');
+</script>
+
 	<script
 	  src="https://code.jquery.com/jquery-3.2.1.min.js"
 	  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
