--- a/Swingarm.html
+++ b/Swingarm.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="stylesheets/screenintro.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112635987-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112635987-1');
+</script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 
@@ -95,7 +104,7 @@
         <div class="grid-span">
           <h2>The history behind it</h2>
           The swingarm is my latest venture in the run of component development. I have always experienced a huge amount of flex as I up the pace on corner entry. A full body weave as if it were hinged in the middle. The frame is still a work in progress but
-          that aside I considered in principal that a road derived old cast swingarm is probably lacking in stiffness. You only need to look back to the alterations done by HRC 20 years ago to see it had issues. I wasn’t too impressed with their tactics
+          that aside I considered in principal that a road derived old cast swingarm is probably lacking in stiffness. Looking back to the alterations done by HRC 20 years ago I can see it had issues. I wasn’t too impressed with their tactics
           though. They produced a thick 6mm plate that you could weld onto the top of the swingarm to add lateral stiffness. What a bodge! Then you could buy various cast variations with additional internal webs. They gave in and went double sided which is a
           logical step. I’m sticking with the single sided for now as I want to maintain the ability for fast wheel changes.
         </div>
@@ -130,13 +139,14 @@
           <h2>The result</h2>
           Now I know what you’re thinking; where’s the consistency? No food was allowed in or out of the tester once testing commenced and the measurements were done a few times. The swingarm is constructed with 5083 throughout purely because it avoids the
           need for post weld heat treatment. Pivot mounts and hub clamp were machined from roled solid. Cast blocks are easy to obtain but roled offers slightly greater grain alignment but are harder to come by. Sheet sections are 3mm thick in the H111
-          condition, rolled and pressed using my old flypress and rollers and then welded with 5356 rods. The old equipment is great; solid cast iron. I am adament in years to come equipment like this will be the cherished jewels. We are just coming out of the
-          'scrap it' phase as some people recognise this.
+          condition, rolled and pressed using my old flypress and rollers and then welded with 5356 rods. The old equipment is great; solid cast iron. I am adament in years to come equipment like this will be the cherished jewels. 
+          
         </div>
         <div class="grid-left-two">
           <h2>Other additions</h2>
-          To finish of the fabrication I made a cushless drive hub along with a new eccentric hub and spindle of my own design to give greater resistance to radial loads. I tested and raced the standard setup at 150hp and found nothing significant other than
-          perhaps slightly accelerated bearing wear prodimantly due to the removal of the cush drive.
+          To finish of the fabrication I made a cushless drive hub along with a new eccentric hub and spindle of my own design to give greater resistance to radial loads. I would have prefered to use a 7000 series aluminium for theconstruction of the rear arm; 
+		  such as 7020. It offers greater tensile strength per relative thickness of section used in comparison to 5083, however 7020 is hard to come by and expensive in particulary sizes. It's also likely to require heat treatment and post machining processes 
+		  to compensate for the distortion.
         </div>
       </div>
     </div>
