pictures sorted in aero. changed text in engine

--- a/Introduction.html
+++ b/Introduction.html
@@ -99,7 +99,7 @@
           Back in 2012, I started to think that having raced many modern bikes I was lacking the satisfaction I was hoping for when I started racing. Reluctant to pursue a relentless story of refinement I
           started to think about what was missing; a relationship; the psychology of what was below me. What if I believed I could build something better; something purpose built for racing? To go against the grain and start enjoying racing again I purchased a £900 VFR800 that looked like it had been pulled
           out of the sea in Southampton in 2012. My plan was to always build a frame but what it would look like and what materials were mere minor details; it would happen, in good time.<br>
-          As the developments have progressed to this day; the only component I am still using from that bike is the fuel pump. The rest has been made by myself using prodomently manual machines and hand fabrication techniques or for the few components I have
+          As the developments have progressed to this day; the only component I am still using from that bike is the fuel pump. The rest has been made by myself using my own machines; prodomently manual with infrequent CNC work, along with extensive hand fabrication techniques or for the few components I have
           not tackled such as brake calipers, wheels and crank casings; I have sourced elsewhere.
           <div class="image-right-container" width="350px">
             <img src="img/002.jpg" class="image-right" width="330px">
