--- a/Engine.html
+++ b/Engine.html
@@ -108,7 +108,7 @@
             <div class="main-container">
       <div class="grid-span">
         <h2>The history behind it</h2>
-        It has taken me 5 years on and off to develop the engine in amongst all of the other tasks. As it stands today it is fairly reliable and quite modestly powerful but I can see that I am reaching the limits of these crankcases. Primarily due to the weak open deck arrangment and the high cylinder pressures I have induced. I have closed the unsupported cylinder castings in a hexagonal arrangement to provide rigidity behind the thrust faces. Manufacturers tend to favour open cylinder decks due to lower production costs as a closed deck will require single use cores rather than an open deck utilising replenishable tooling. It has been quite a learning experience and I have stumbled across some interesting tricks which you wouldn’t normally find in most tuned engines.
+        It has taken me 5 years on and off to develop the engine in amongst all of the other tasks. As it stands today it is reliable and quite modestly powerful but I can see that I am reaching the limits of these basic crankcases. Primarily due to the weak open deck arrangment and the high cylinder pressures I have introduced. I have closed the unsupported cylinder castings in a hexagonal arrangement to provide rigidity behind the thrust faces. Manufacturers tend to favour open cylinder decks due to lower production costs as a closed deck will require single use cores rather than an open deck utilising replenishable tooling. It has been quite a learning experience and I have stumbled across some interesting tricks which you wouldn’t normally find in most tuned engines.
       </div>
 	  
 	  <div class="image-left-container" width="430px">
@@ -120,7 +120,7 @@
 	  
       <div class="grid-left-two">
         <h2 align="left">Slow to learn</h2>
-        I lacked the time and resource to do back to back testing to really validate individual gains in components. It’s difficult to describe in words but from spending so much time immersed in each and every component in the way I have, coupled with experience from previous tuning you can attribute a factor of contribution to the power gains and equate approximate results to these areas. When a component contributes a far greater gain than expected you can start to explore the how’s and why’s; which amongst many, led me to investigating two interesting areas; the induction turbulence and cylinder pressures.
+        I lacked the time and resource to do back to back testing to really validate individual gains in components. It’s difficult to describe in words but from spending so much time immersed in each and every component in the way I have, coupled with experience from previous tuning you can attribute a factor of contribution to the power gains and equate approximate results to these areas. When a component contributes a far greater gain than expected you can start to explore the how’s and why’s; which amongst many, led me to investigating two interesting areas; the induction turbulence of my very exploratory porting and the unusual effects of reverberating waves in the exhaust.
       </div>
       <div class="grid-right-three">
         <h2 align="left">Lots still to do...</h2>
@@ -145,15 +145,15 @@
 		The 180 degree firing order is sublime to ride; silky smooth. The theory is the distance, consistency and balance of loads emitted from a combustion explosion to inertia at the wheel. Take a big v twin like a ktm; each piston is a dinner plate, with every nuclear sized explosion there is a huge momentary surge in torque exerted through the crankshaft, huge strain on the primary drive gears which quickly dissipates through normal mechanical losses as it finds it’s way through the gearbox down the chain to the back wheel by which time the next explosion has just taken place in the other cylinder, brace brace brace, here it comes, hold on tyre, are you ready. That surge in power graphically would form large waves of peaks and troughs which exerts greater spikes in torque to the back tyre to compensate for the fact it only fires 2 big dinner plate pistons which will wear it out faster and give higher chance of high siding. Now compare that to a 180 v4; each spike of power will be lower as each cylinder produces less power and the spread between them is narrower meaning less loss of inertia and greater consistency in reciprocating torque; producing a smoother, calmer, safer ride with a tyre that lasts longer. I think slowly the likes of Ducati and Honda are really sold on this. I’m pretty sure all motogp bikes are v4 or v5 for that very reason, eventually all the road sports bikes will be V4’s (hopefully) the world will be a better place
       </div>
 		<div class="image-left-container" width="430px">
-          <img src="img/engine2.jpg" class="image-left" width="400px">
+          <img src="img/paddockpic.jpg" class="image-left" width="400px">
           <div class="image-text">
-            Guy and Tom discussing cam profiles
+            Discussing cam profiles with Guy
           </div>
 		  </div>
 		
 	  		<div class="grid-wide-center">
         <h2>Where next?</h2>
-	    Some useful upgrades due for 2018, new design of valve spring and different ports are first. I would love to manufacture my own engine. It would really seal the package as a true Parkes motorcycle. The only issue is time and a bit of finance. I have turned down all sponsorship to date as I really wanted to do it all of my own back. I think I would need to be realistic and if I were to open up the crankcase casting chapter I would reach out to those willing companies for help. John Britten was a lucky chap, he had the use of his fathers foundry and a team to help him.
+	    Some useful upgrades due for 2018, new design of valve spring and different ports are first. Modifications to the throttle bodies I made back in 2015 to now use 8 injectors and experiment with my 3rd design of alternator. I would love to manufacture my own engine. It would really seal the package as a true Parkes motorcycle. The only issue is time and a bit of finance. I have turned down all sponsorship to date as I really wanted to do it all of my own back; I would get complacent if goodies came too easily. I think I would need to be realistic and if I were to open up the crankcase casting chapter I would reach out to those willing companies for help. John Britten was a lucky chap, he had the use of his fathers foundry and a team of like minded enthusiastic fabricators to help him.
         </div>
 		
 		</div>
