--- a/Contact.html
+++ b/Contact.html
@@ -105,7 +105,7 @@
       <div class="main-container">
         <div class="grid-left-two">
           <h2>Get in touch</h2>
-          If you are interested in the technical detail or can teach me how to build foundary to cast my own engine then you can contact me through the enquiry form below:
+          If you are interested in the technical detail or can offer the use of your foundary to cast my own engine then you can contact me through the enquiry form below:
         </div>
         <div class="entry-content content">
           <div class='gf_browser_unknown gform_wrapper' id='gform_wrapper_1'>
