--- a/Introduction.html
+++ b/Introduction.html
@@ -152,7 +152,7 @@
         Motivation has been easy to find as the project has picked up momentum as I try to challenge convention. I'm actually not a massive fan of all things motorcycle. Most of the top racers live and breath bikes day and night. I don't keep upto date with
         national or international racers; I watch one or two GP's a year if I'm not too busy in the shed when the repeats are on. I don't watch much TV either; mostly repeats from years ago.
         The machining skills and fabrication ability is all learnt on the go. People would often scare me that gearbox's were the work of the devil and I should never peak inside or I would be haunted for
-        eternity. My curiosity wouldn't stop me and once inside I found it quite easy. I was about 19 at the time and as new challenges came and went I found I wasn't phased by much, buying the tools and machines I needed to do the job, some things just needed more concentration than others.
+        eternity. My curiosity wouldn't stop me and once inside; I found it quite easy. I was about 19 at the time and as new challenges came and went I found I wasn't phased by much, buying the tools and machines I needed to do the job, some things just needed more concentration than others.
       </div <div class="grid-narrow-center">
       <h2>Look out for other new projects</h2>
       Keep an eye out for the new carbon fibre Parkes mountain bike project
