--- a/Swingarm.html
+++ b/Swingarm.html
@@ -103,7 +103,7 @@
       <div class="main-container">
         <div class="grid-span">
           <h2>The history behind it</h2>
-          The swingarm is my latest venture in the run of component development. I have always experienced a huge amount of flex as I up the pace on corner entry. A full body weave as if it were hinged in the middle. The frame is still a work in progress but
+          The swingarm is my latest venture in the run of component development. I have always experienced unwanted flex as I up the pace on corner entry. A full body weave as if it were hinged in the middle when at full lean on harsh bumps. The frame is still a work in progress but
           that aside I considered in principal that a road derived old cast swingarm is probably lacking in stiffness. Looking back to the alterations done by HRC 20 years ago I can see it had issues. I wasn’t too impressed with their tactics
           though. They produced a thick 6mm plate that you could weld onto the top of the swingarm to add lateral stiffness. What a bodge! Then you could buy various cast variations with additional internal webs. They gave in and went double sided which is a
           logical step. I’m sticking with the single sided for now as I want to maintain the ability for fast wheel changes.
@@ -119,8 +119,8 @@
         <div class="grid-wide-center">
           <h2>The old one</h2>
           Back into 2012 when the project first started I welded a bracing structure on top of the swingarm which was a token gesture to stiffness (it was pants). I cut a standard swingarm open to examine the casting thicknesses and sections throughout. I was
-          quite surprised to see how much material there was particularly around the shock linkage mount. I could see some good scope for improvement around the hub end. The ‘jaws’ as I call them that grasp the hub are equally poorly supported and could see a
-          lot of flex. An improvement would be to make one side of the jaw short and rigid whilst reducing the length of the opposing jaw as much as possible in an effort to reduce both lateral and torsional flex.
+          quite surprised to see how much material there was particularly around the shock linkage mount and just how little there was towards the hub clamp. I could see some good scope for improvement. The ‘jaws’ as I call them that grasp the hub are equally poorly supported and could see the source of
+          the flex. An improvement would be to make one side of the jaw short and rigid whilst reducing the length of the opposing jaw as much as possible in an effort to reduce both lateral and torsional flex.
         </div>
         <div class="grid-wide-center">
           <h2>The new one</h2>
@@ -137,16 +137,16 @@
 
         <div class="grid-narrow-center">
           <h2>The result</h2>
-          Now I know what you’re thinking; where’s the consistency? No food was allowed in or out of the tester once testing commenced and the measurements were done a few times. The swingarm is constructed with 5083 throughout purely because it avoids the
+          Now I know what you’re thinking; where’s the consistency? No food was allowed in or out of the tester once testing commenced and the measurements were done a few times. The new swingarm is constructed with 5083 sheet throughout purely because it avoids the
           need for post weld heat treatment. Pivot mounts and hub clamp were machined from roled solid. Cast blocks are easy to obtain but roled offers slightly greater grain alignment but are harder to come by. Sheet sections are 3mm thick in the H111
           condition, rolled and pressed using my old flypress and rollers and then welded with 5356 rods. The old equipment is great; solid cast iron. I am adament in years to come equipment like this will be the cherished jewels. 
           
         </div>
         <div class="grid-left-two">
           <h2>Other additions</h2>
-          To finish of the fabrication I made a cushless drive hub along with a new eccentric hub and spindle of my own design to give greater resistance to radial loads. I would have prefered to use a 7000 series aluminium for theconstruction of the rear arm; 
+          To finish of the fabrication I made a cushless drive hub along with a new eccentric hub and spindle of my own design to give greater resistance to radial loads. I would have prefered to use a 7000 series aluminium for the construction of the rear arm; 
 		  such as 7020. It offers greater tensile strength per relative thickness of section used in comparison to 5083, however 7020 is hard to come by and expensive in particulary sizes. It's also likely to require heat treatment and post machining processes 
-		  to compensate for the distortion.
+		  to compensate for the distortion. Mine will be slightly heavier as a result due to the use of thicker section sizes. It will be favourable to the bikes weight distribution at least which is currently somewhat biased the front: Cue the carbon front fork project!
         </div>
       </div>
     </div>
